2006-12-08 - standa
Save some more registers in vst_effects() and fVDI runs in TOS4.04
again here.
Ft2 module is more FreeType2 library error agnostic now. For example
if the glyph doesn't render nothing is displayed, but it should not
crash the application anymore.
More 2.1.10 vs. 2.2.1 changes (read the migration notes this time ;).
Added the 'mrproper' target which does 'make clean' and also removes
all FT2 related .o/.a files. 

2006-12-04 - johan
Changed to the latest stable release of FreeType (2.2.1).

2006-11-29 - standa
Hopefully NVDI compatible spdchar.map handling now in place. Default
NVDI mapping added. Can use our 'Czech KEYBCS' spdchar.map table
with no problem. IMHO 98% of character mappings should be correct.
Adding the #include <freetype/internal/internal.h> to the
ft2_ftsystem.c to get FreeType2 2.2.1 build working.

2006-11-27 - johan
Cache flush enabled after driver load.
Turned on supervisor memory access flag in engine binary.
fVDI engine version bumped to 0.968beta.

2006-11-25/26 - standa
Using the newly created lib_vrt_cpyfm_nocheck to mono/8bit expand text
(fixes vst_fg_color() using Papyrus X demo text color rendering).

2006-11-15 - standa
Underline effect doesn't need to keep a font glyph cached (done in the
text rendering function directly.
Fontextra.ref_count introduced to fix fundamental Fontheader memory 
management bug that must have been causing crashes and rendering
errors because of use of unallocated memory.

2006-11-13 - standa
Some vertical font alignment tuning. Still not completely right IMHO.

2006-11-12 - standa
Implementing algorithmic FreeType font vst_effects() algorithms.
Left the 'outline' for later.

2006-07-14 - standa
FreeType antialiased rendering uses the glyph->minx too now. No weird
kerning anymore.
Glyph debugging added for debug > 3.

2006-06-05 - johan
Reversed bit order for 32 bit vr_trnfm.
Fix for debug output of return values.
Correction of colour selection for mono-expand blit in ARAnyM driver.
